--- a/encyclopedia/templates/encyclopedia/new-entry.html
+++ b/encyclopedia/templates/encyclopedia/new-entry.html
@@ -7,6 +7,7 @@ Encyclopedia
 {% block body %}
 <h1>Create new page</h1>
 <form id="new_page" action="{% url 'wiki:new-entry' %}" name="new_page" method="post">
+    {% csrf_token %}
     {{ form }}
     <input type="submit" value="Create Entry">
 </form>
